[package]
name = "wgpugst"
version = "0.1.0"
edition = "2021"

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
version = "0.10.0"
optional = true

# used to test all the example shaders
[dev-dependencies.naga]
git = "https://github.com/gfx-rs/naga"
version = "0.10.0"
features = ["wgsl-in"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.18.0" 
gstreamer-base = "0.18.0"
gstreamer-video = "0.18.0"
gstreamer-app = "0.18.0"
gstreamer-audio = "0.18.0"
gstreamer-pbutils = "0.18.0"
once_cell = "1.0"
#chrono = { version = "^0.4.13", features= ["serde"] }
arrayvec = "0.7"
log = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.21"
rust_decimal_macros = "1.21"
cgmath = "0.18.0"
byte-slice-cast = "1.2.1"
anyhow = "1"
termion = { version = "1.5", optional = true }
chrono = { version = "^0.4.13", features= ["serde"] }
raw-window-handle = "0.4"
smallvec = "1"
bytemuck = { version = "1.4", features = [ "derive" ] }
winit = "0.26.0"
pollster = "0.2"
bitflags = "1.3.2"
rayon = "1.5.1"
qp2p = {version = "0.28.7", features = ["igd"] }
bytes = { version = "1.2.1", features = ["serde"] }
tokio = { version = "1.20.1", features = ["macros", "rt","rt-multi-thread"] }
public-ip = "0.2.2"
concurrent-queue = "1.2.4"
haphazard = "0.1.4"
iced_native = { path = "./native" }
iced_wgpu = { path = "./wgpu" }
iced_winit = { path = "./winit" }
winapi = "0.3.9"
flexbuffers = "2.0.0"
rcu-clean = "0.1.6"
windows-service = "0.5.0"
winres = "0.1.12"


[dev-dependencies]
bitflags = "1.3.2"
bytemuck = { version = "1.4", features = ["derive"] }
ddsfile = "0.4"
log = "0.4"
noise = { version = "0.7", default-features = false }
obj = "0.10"
rand = "0.7.2"
async-executor = "1.0"
env_logger = "0.8"




[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }